@@ -1,6 +1,6 @@
 # Vend::Interpolate - Interpret Interchange tags
 # 
-# $Id: Interpolate.pm,v 2.283 2007-08-10 08:41:22 thunder Exp $
+# $Id: Interpolate.pm,v 2.284 2007-08-20 23:57:34 kwalsh Exp $
 #
 # Copyright (C) 2002-2007 Interchange Development Group
 # Copyright (C) 1996-2002 Red Hat, Inc.
@@ -28,7 +28,7 @@ package Vend::Interpolate;
 require Exporter;
 @ISA = qw(Exporter);
 
-$VERSION = substr(q$Revision: 2.283 $, 10);
+$VERSION = substr(q$Revision: 2.284 $, 10);
 
 @EXPORT = qw (
 
@@ -976,6 +976,13 @@ sub conditional {
 		$op = "q{$op}" unless defined $noop;
 		$op .=	qq%	$operator $comp%
 				if defined $comp;
+	}
+	elsif($base eq 'scratchd') {
+		$op =	qq%$::Scratch->{$term}%;
+		$op = "q{$op}" unless defined $noop;
+		$op .=	qq%	$operator $comp%
+				if defined $comp;
+		delete $::Scratch->{$term};
 	}
 	elsif($base =~ /^value/) {
 		$op =	qq%$::Values->{$term}%;
