@@ -132,6 +132,9 @@ Core
 
 * Removed MV_DOLLAR_ZERO workaround for a bug fixed 5 years ago.
 
+* Added a new "scratchd" test type.  This is the same as "scratch" except
+  that it deletes the variable from the scratchpad after testing.
+
 UserDB
 ------
 
